updated application and then added tailwind css

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,11 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Node ###
+node_modules/
+npm-debug.log*
+package-lock.json
+
+### Tailwind CSS ###
+src/main/resources/static/css/output.css
