--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,16 +12,11 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
-
-# Liquibase Configuration
-spring.liquibase.enabled=true
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.liquibase.drop-first=false
 
 # Mail Configuration
 spring.mail.host=
