--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,13 @@
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>netty-nio-client</artifactId>  <!-- Recommended for performance -->
     </dependency>
+
+    <!-- Swagger/OpenAPI Documentation -->
+    <dependency>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        <version>2.7.0</version>
+    </dependency>
 	</dependencies>
 
 	<build>
