--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,21 @@ spring.servlet.multipart.max-request-size=10MB
 
 # Active Profile
 spring.profiles.active=dev
+
+# Security Configuration
+# IMPORTANT: Set a strong 32-character encryption key for production
+# This key is used to encrypt sensitive data like API keys, passwords, and DKIM keys
+# Generate a secure key: openssl rand -base64 32 | head -c 32
+encryption.key=OpenMailerDevKey1234567890123456
+
+# Swagger/OpenAPI Configuration
+# Access Swagger UI at: http://localhost:8080/swagger-ui.html
+# Access API docs at: http://localhost:8080/v3/api-docs
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.syntaxHighlight.activated=true
