--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "build:css": "npx @tailwindcss/cli -i ./src/main/resources/static/css/input.css -o ./src/main/resources/static/css/output.css",
     "watch:css": "npx @tailwindcss/cli -i ./src/main/resources/static/css/input.css -o ./src/main/resources/static/css/output.css --watch",
-    "build:css:prod": "npx @tailwindcss/cli -i ./src/main/resources/static/css/input.css -o ./src/main/resources/static/css/output.css --minify"
+    "build:css:prod": "npx @tailwindcss/cli -i ./src/main/resources/static/css/input.css -o ./src/main/resources/static/css/output.css --minify",
+    "build:js": "terser src/main/resources/static/js/*.js --output src/main/resources/static/js/bundle.min.js --compress --mangle",
+    "build:prod": "npm run build:css:prod && npm run build:js"
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "terser": "^5.36.0"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18"
