--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build:css": "npx @tailwindcss/cli -i ./src/main/resources/static/css/input.css -o ./src/main/resources/static/css/output.css",
     "watch:css": "npx @tailwindcss/cli -i ./src/main/resources/static/css/input.css -o ./src/main/resources/static/css/output.css --watch",
     "build:css:prod": "npx @tailwindcss/cli -i ./src/main/resources/static/css/input.css -o ./src/main/resources/static/css/output.css --minify",
-    "build:js": "terser src/main/resources/static/js/*.js --output src/main/resources/static/js/bundle.min.js --compress --mangle",
+    "build:js": "mkdir -p src/main/resources/static/js/min && for file in src/main/resources/static/js/*.js; do terser \"$file\" -o \"src/main/resources/static/js/min/$(basename \"$file\" .js).min.js\" --compress --mangle; done",
     "build:prod": "npm run build:css:prod && npm run build:js"
   },
   "devDependencies": {
