--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
           <dependency>
               <groupId>software.amazon.awssdk</groupId>
               <artifactId>bom</artifactId>
-              <version>2.28.28</version>  <!-- Safe, recent stable; bump to higher 2.x if available -->
+              <version>2.40.12</version> 
               <type>pom</type>
               <scope>import</scope>
           </dependency>
