finished phase 3, implemented email tracking

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,6 +58,9 @@ spring.profiles.active=dev
 # Generate a secure key: openssl rand -base64 32 | head -c 32
 encryption.key=OpenMailerDevKey1234567890123456
 
+# Base URL for tracking (used in email tracking pixels and links)
+app.base-url=http://localhost:8080
+
 # Swagger/OpenAPI Configuration
 # Access Swagger UI at: http://localhost:8080/swagger-ui.html
 # Access API docs at: http://localhost:8080/v3/api-docs
