--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,34 @@
         <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
         <version>2.7.0</version>
     </dependency>
+
+    <!-- DNS Lookup for domain verification -->
+    <dependency>
+        <groupId>dnsjava</groupId>
+        <artifactId>dnsjava</artifactId>
+        <version>3.5.3</version>
+    </dependency>
+
+    <!-- DKIM Signing for email authentication -->
+    <dependency>
+        <groupId>net.markenwerk</groupId>
+        <artifactId>utils-mail-dkim</artifactId>
+        <version>2.0.0</version>
+    </dependency>
+
+    <!-- CSV Processing for contact import/export -->
+    <dependency>
+        <groupId>com.opencsv</groupId>
+        <artifactId>opencsv</artifactId>
+        <version>5.9</version>
+    </dependency>
+
+    <!-- Email Validation -->
+    <dependency>
+        <groupId>commons-validator</groupId>
+        <artifactId>commons-validator</artifactId>
+        <version>1.8.0</version>
+    </dependency>
 	</dependencies>
 
 	<build>
