--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,16 @@
         <artifactId>totp</artifactId>
         <version>1.7.1</version>
     </dependency>
+
+    <!-- Redis for Caching -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-cache</artifactId>
+    </dependency>
 	</dependencies>
 
 	<build>
