--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,8 +14,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.liquibase.enabled=true
 
 # Mail Configuration - Development (using fake SMTP for testing)
-spring.mail.host=localhost
-spring.mail.port=1025
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=587
+spring.mail.username=sinhaparth555@gmail.com
+spring.mail.password=ycHjASNMEgwGQBVn
 
 # Thymeleaf Configuration - Development
 spring.thymeleaf.cache=false
