--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,15 @@
 # Production Profile Configuration
 
 # Database Configuration (PostgreSQL) - Production
-# TODO: Set these via environment variables in production
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+# Set these via environment variables in production
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/openmailer}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:postgres}
+
+# Redis Configuration - Production
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:}
 
 # JPA Configuration - Production
 spring.jpa.show-sql=false
@@ -14,11 +19,12 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.liquibase.enabled=true
 
 # Mail Configuration - Production
-# TODO: Set these via environment variables in production
-spring.mail.host=${MAIL_HOST}
+# Set these via environment variables in production
+# Using defaults to allow app to start without mail configuration
+spring.mail.host=${MAIL_HOST:smtp.example.com}
 spring.mail.port=${MAIL_PORT:587}
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.username=${MAIL_USERNAME:}
+spring.mail.password=${MAIL_PASSWORD:}
 
 # Thymeleaf Configuration - Production
 spring.thymeleaf.cache=true
@@ -31,6 +37,10 @@ logging.level.org.hibernate=WARN
 
 # Security Configuration - Production
 # Never use default credentials in production
+encryption.key=${ENCRYPTION_KEY:ChangeThisToA32CharacterKeyNow!}
+
+# Base URL for tracking (used in email tracking pixels and links)
+app.base-url=${APP_BASE_URL:https://your-app.railway.app}
 
 # Error handling - Production (hide details)
 server.error.include-message=never
